first website done

--- a/index.html
+++ b/index.html
@@ -9,9 +9,45 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome to</h1>
-    <h1><span class="name-highlight">Golam Maula Lincoln </span>World</h1>
-    <h1>World-class Web Dev</h1>
-    <p>I'm a Web Designer/ Front End Developer and living in Dhaka,Bangladesh. This is my first step to learning web development. I think I will be a world-class web developer. If you wanna hire me click the button below!</p>
+    <section class="top-banner">
+        <div class="first-half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="orange-highlight">Golam Maula Lincoln </span>World</h1>
+            <h1>World-class Web Dev</h1>
+            <p>I'm a Web Designer/ Front End Developer and living in Dhaka,Bangladesh. This is my first step to learning web development. I think I will be a world-class web developer. If you wanna hire me click the button below!</p>
+            <a class="link-btn" href="#" target="_blank">HIRE ME</a>
+        </div>
+        <div class="first-half-width">
+            <img src="images/image 1.png" alt="">
+        </div>
+    </section>
+    <section class="dream-area">
+        <div class="first-half-width">
+            <img src="images/dream.png" alt="">
+        </div>
+        <div class="first-half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer.</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a class="link-btn" href="#" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div class="first-half-width single-exp" id="full-stact">
+            <h1>Full Stack Web Developer</h1>
+            <p class="orange-highlight">2021 - Present | Pro Level Developer</p>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div class="first-half-width single-exp" id="baby-dev">
+            <h1>Baby Web Developer</h1>
+            <p class="orange-highlight">2020-2021 | Programming Hero (Remote)</p>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </section>
+    <footer>
+        <p>&copy; Lincoln 2020, All rights reserved.</p>
+    </footer>
 </body>
 </html>
